--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "grunt-cli": "^1.1.0",
     "grunt-contrib-concat": "^1.0.0",
     "grunt-contrib-jshint": "^1.0.0",
-    "grunt-contrib-watch": "^1.0.0"
+    "grunt-contrib-watch": "^1.0.0",
+    "http-server": "^0.9.0"
   }
 }
