--- a/netlify.toml
+++ b/netlify.toml
@@ -24,7 +24,7 @@
 # deploy contexts will inherit these settings.
 [context.production]
   publish = "output/"
-  command = "make publish"
+  command = "npm start"
   environment = { ACCESS_TOKEN = "super secret", NODE_VERSION = "14.15.3" }
 
 # Deploy Preview context: all deploys generated from a pull/merge request will
